fix: add validator order status when create report