@@ -1,24 +1,29 @@
 package org.retrade.main.service.impl;
 
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
 import lombok.RequiredArgsConstructor;
+import org.retrade.common.model.dto.request.QueryFieldWrapper;
 import org.retrade.common.model.dto.request.QueryWrapper;
+import org.retrade.common.model.dto.response.PaginationWrapper;
 import org.retrade.common.model.exception.ActionFailedException;
 import org.retrade.common.model.exception.ValidationException;
+import org.retrade.main.model.constant.OrderStatusCodes;
 import org.retrade.main.model.dto.request.CreateReportSellerRequest;
 import org.retrade.main.model.dto.response.ReportSellerResponse;
 import org.retrade.main.model.entity.OrderComboEntity;
+import org.retrade.main.model.entity.OrderStatusEntity;
 import org.retrade.main.model.entity.ProductEntity;
 import org.retrade.main.model.entity.ReportSellerEntity;
 import org.retrade.main.repository.jpa.OrderComboRepository;
 import org.retrade.main.repository.jpa.ProductRepository;
 import org.retrade.main.repository.jpa.ReportSellerRepository;
-import org.retrade.main.repository.jpa.SellerRepository;
 import org.retrade.main.service.ReportSellerService;
 import org.retrade.main.util.AuthUtils;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -26,7 +31,6 @@ public class ReportSellerServiceImpl implements ReportSellerService {
     private final ReportSellerRepository reportSellerRepository;
     private final ProductRepository productRepository;
     private final OrderComboRepository orderComboRepository;
-    private final SellerRepository sellerRepository;
     private final AuthUtils authUtils;
 
     @Override
@@ -39,6 +43,8 @@ public class ReportSellerServiceImpl implements ReportSellerService {
 
         ProductEntity productEntity = productRepository.findById(request.getProductId())
                 .orElseThrow(() -> new ValidationException("Product not found with id: " + request.getProductId()));
+
+        validateReportOnOrderComboStatus(orderComboEntity.getOrderStatus());
 
         boolean containsProduct = orderComboEntity.getOrderItems().stream()
                 .anyMatch(orderItem -> orderItem.getProduct().getId().equals(request.getProductId()));
@@ -75,37 +81,32 @@ public class ReportSellerServiceImpl implements ReportSellerService {
     }
 
     @Override
-    public List<ReportSellerResponse> getAllReportSeller(QueryWrapper queryWrapper) {
-        List<ReportSellerEntity> reportSellerEntities = reportSellerRepository.findAll();
-
-        return reportSellerEntities.stream()
-                .map(this::mapToReportSellerResponse)
-                .collect(Collectors.toList());
+    public PaginationWrapper<List<ReportSellerResponse>> getAllReportSeller(QueryWrapper queryWrapper) {
+        return reportSellerRepository.query(queryWrapper, (param) -> (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            return getPredicate(param, root, criteriaBuilder, predicates);
+        }, (items) -> {
+            var list = items.map(this::mapToReportSellerResponse).stream().toList();
+            return new PaginationWrapper.Builder<List<ReportSellerResponse>>()
+                    .setPaginationInfo(items)
+                    .setData(list)
+                    .build();
+        });
     }
 
     @Override
-    public List<ReportSellerResponse> getAllReportBySellerId(String sellerId, QueryWrapper   queryWrapper) {
-        List<ReportSellerEntity> reportSellerEntities = reportSellerRepository.findBySellerId(sellerId);
-        return reportSellerEntities.stream()
-                .map(entity -> {
-                    var customer = entity.getCustomer();
-                    var order = entity.getOrderCombo();
-                    return ReportSellerResponse.builder()
-                                    .reportSellerId(entity.getId())
-                                    .sellerId(entity.getSeller().getId())
-                                    .customerId(customer != null ? customer.getId() : null)
-                                    .orderId(order.getId())
-                                    .typeReport(entity.getTypeReport())
-                                    .content(entity.getContent())
-                                    .image(entity.getImage())
-                                    .resolutionDetail(entity.getResolutionDetail())
-                                    .resolutionStatus(entity.getResolutionStatus())
-                                    .createdAt(entity.getCreatedDate().toLocalDateTime())
-                                    .productId(entity.getProduct().getId())
-                                    .build();
-                        }
-                )
-                .collect(Collectors.toList());
+    public PaginationWrapper<List<ReportSellerResponse>> getAllReportBySellerId(String sellerId, QueryWrapper queryWrapper) {
+        return reportSellerRepository.query(queryWrapper, (param) -> (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            predicates.add(criteriaBuilder.equal(root.get("seller").get("id"), sellerId));
+            return getPredicate(param, root, criteriaBuilder, predicates);
+        }, (items) -> {
+            var list = items.map(this::mapToReportSellerResponse).stream().toList();
+            return new PaginationWrapper.Builder<List<ReportSellerResponse>>()
+                    .setPaginationInfo(items)
+                    .setData(list)
+                    .build();
+        });
     }
 
     @Override
@@ -113,23 +114,7 @@ public class ReportSellerServiceImpl implements ReportSellerService {
         ReportSellerEntity reportSellerEntity = reportSellerRepository.findById(id).orElseThrow(
                 () -> new ValidationException("Report not found with id: " + id)
         );
-        return ReportSellerResponse.builder()
-                .sellerId(reportSellerEntity.getSeller().getId())
-                .typeReport(reportSellerEntity.getTypeReport())
-                .content(reportSellerEntity.getContent())
-                .image(reportSellerEntity.getImage())
-                .createdAt(reportSellerEntity.getCreatedDate().toLocalDateTime())
-                .productId(reportSellerEntity.getProduct().getId())
-                .adminId(reportSellerEntity.getAccount() != null ? reportSellerEntity.getAccount().getId() : null)
-                .customerId(reportSellerEntity.getCustomer().getId())
-                .resolutionDetail(reportSellerEntity.getResolutionDetail())
-                .resolutionStatus(reportSellerEntity.getResolutionStatus())
-                .resolutionDate(reportSellerEntity.getResolutionDate() != null
-                        ? reportSellerEntity.getResolutionDate().toLocalDateTime()
-                        : null)
-                .orderId(reportSellerEntity.getOrderCombo().getId())
-                .reportSellerId(reportSellerEntity.getId())
-                .build();
+        return mapToReportSellerResponse(reportSellerEntity);
     }
 
     @Override
@@ -143,24 +128,8 @@ public class ReportSellerServiceImpl implements ReportSellerService {
             reportSellerEntity.setResolutionStatus("REJECT");
         }
         try {
-            reportSellerRepository.save(reportSellerEntity);
-            return ReportSellerResponse.builder()
-                    .sellerId(reportSellerEntity.getSeller().getId())
-                    .typeReport(reportSellerEntity.getTypeReport())
-                    .content(reportSellerEntity.getContent())
-                    .image(reportSellerEntity.getImage())
-                    .createdAt(reportSellerEntity.getCreatedDate().toLocalDateTime())
-                    .productId(reportSellerEntity.getProduct().getId())
-                    .adminId(reportSellerEntity.getAccount() != null ? reportSellerEntity.getAccount().getId() : null)
-                    .customerId(reportSellerEntity.getCustomer().getId())
-                    .resolutionDetail(reportSellerEntity.getResolutionDetail())
-                    .resolutionStatus(reportSellerEntity.getResolutionStatus())
-                    .resolutionDate(reportSellerEntity.getResolutionDate() != null
-                            ? reportSellerEntity.getResolutionDate().toLocalDateTime()
-                            : null)
-                    .orderId(reportSellerEntity.getOrderCombo().getId())
-                    .reportSellerId(reportSellerEntity.getId())
-                    .build();
+            var result = reportSellerRepository.save(reportSellerEntity);
+            return mapToReportSellerResponse(result);
         }catch (Exception e) {
             throw new ValidationException("Failed to create report: " + e.getMessage());
         }
@@ -186,30 +155,61 @@ public class ReportSellerServiceImpl implements ReportSellerService {
         reportSellerRepository.save(reportSellerEntity);
         return mapToReportSellerResponse(reportSellerEntity);    }
 
-    private ReportSellerResponse mapToReportSellerResponse(ReportSellerEntity reportSellerEntity) {
-        return ReportSellerResponse.builder()
-                .sellerId(reportSellerEntity.getSeller().getId())
-                .typeReport(reportSellerEntity.getTypeReport())
-                .content(reportSellerEntity.getContent())
-                .image(reportSellerEntity.getImage())
-                .createdAt(reportSellerEntity.getCreatedDate().toLocalDateTime())
-                .productId(reportSellerEntity.getProduct().getId())
-                .adminId(reportSellerEntity.getAccount() != null ? reportSellerEntity.getAccount().getId() : null)
-                .customerId(reportSellerEntity.getCustomer().getId())
-                .resolutionDetail(reportSellerEntity.getResolutionDetail())
-                .resolutionStatus(reportSellerEntity.getResolutionStatus())
-                .resolutionDate(reportSellerEntity.getResolutionDate() != null
-                        ? reportSellerEntity.getResolutionDate().toLocalDateTime()
-                        : null)
-                .orderId(reportSellerEntity.getOrderCombo().getId())
-                .reportSellerId(reportSellerEntity.getId())
-                .build();
-    }
+
 
 
     @Override
     public ReportSellerResponse processReportSeller(String id, String resolutionDetail) {
         return null;
+    }
+
+    private void validateReportOnOrderComboStatus(OrderStatusEntity orderStatus) {
+        if (orderStatus == null) {
+            throw new ValidationException("Order status is not valid");
+        }
+        var allowedStatus = Set.of(
+                OrderStatusCodes.DELIVERED,
+                OrderStatusCodes.COMPLETED,
+                OrderStatusCodes.RETURN_REQUESTED,
+                OrderStatusCodes.RETURN_APPROVED,
+                OrderStatusCodes.RETURN_REJECTED,
+                OrderStatusCodes.RETURNED
+        );
+        if(allowedStatus.contains(orderStatus.getCode())) {
+            throw new ValidationException("This order is not in right status");
+        }
+    }
+
+    private Predicate getPredicate(Map<String, QueryFieldWrapper> param, Root<ReportSellerEntity> root, CriteriaBuilder criteriaBuilder, List<Predicate> predicates) {
+        if (param != null && !param.isEmpty()) {
+            Predicate[] defaultPredicates = reportSellerRepository.createDefaultPredicate(criteriaBuilder, root, param);
+            predicates.addAll(Arrays.asList(defaultPredicates));
+        }
+        return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
+    }
+
+    private ReportSellerResponse mapToReportSellerResponse(ReportSellerEntity reportSellerEntity) {
+        var seller = reportSellerEntity.getSeller();
+        var order = reportSellerEntity.getOrderCombo();
+        var admin = reportSellerEntity.getAccount();
+        var customer = reportSellerEntity.getCustomer();
+        return ReportSellerResponse.builder()
+                .sellerId(seller.getId())
+                .typeReport(reportSellerEntity.getTypeReport())
+                .content(reportSellerEntity.getContent())
+                .image(reportSellerEntity.getImage())
+                .createdAt(reportSellerEntity.getCreatedDate().toLocalDateTime())
+                .productId(reportSellerEntity.getProduct().getId())
+                .adminId(admin != null ? reportSellerEntity.getAccount().getId() : null)
+                .customerId(customer != null ? reportSellerEntity.getCustomer().getId() : null)
+                .resolutionDetail(reportSellerEntity.getResolutionDetail())
+                .resolutionStatus(reportSellerEntity.getResolutionStatus())
+                .resolutionDate(reportSellerEntity.getResolutionDate() != null
+                        ? reportSellerEntity.getResolutionDate().toLocalDateTime()
+                        : null)
+                .orderId(order != null ? order.getId() : null)
+                .reportSellerId(reportSellerEntity.getId())
+                .build();
     }
 
 }
